sssd: Autospec creation for update from version 2.0.0 to version 2.2.0
Adam Williamson (1):
      sbus: use 120 second default timeout

Alexey Tikhonov (40):
      Fix error in hostname retrieval
      util/tev_curl: Fix double free error in schedule_fd_processing()
      CONFIG: validator rules & test
      sss_client/common.c: fix Coverity issue
      sss_client/common.c: fix off-by-one error in sizes check
      sss_client/common.c: comment amended
      sss_client/nss_services.c: indentation fixed
      sss_client/nss_services.c: fixed incorrect mutex usage
      sss_client: global unexported symbols made static
      providers/ldap: abort unsecure authentication requests
      providers/ldap: fixed check of ldap_get_option return value
      providers/ldap: init sasl_ssf in specific case
      sbus/interface: fixed interface copy helpers
      lib/cifs_idmap_sss: fixed unaligned mem access
      Util: fixed mistype in error string representation
      TESTS: fixed bug in guests startup function
      negcache: avoid "is_*_local" calls in some cases
      providers/ldap: sdap_extend_map_with_list() fixed
      providers/ldap: const params should be const
      providers/proxy: small optimization
      providers/proxy: fixed wrong check
      providers/proxy: fixed usage of wrong mem ctx
      providers/proxy: got rid of excessive mem copies
      providers/proxy: fixed erroneous free of orig_grp
      providers/proxy: const params should be const
      Util: added facility to load nss lib syms
      responder/negcache: avoid calling nsswitch NSS API
      negcache_files: got rid of large array on stack
      TESTS: moved cwrap/test_negcache to cmocka tests
      TESTS: fixed regression in cmocka/test_negcache_2.c
      ci/sssd.supp: getpwuid() leak suppression
      data_provider_be: fixed dereferencing of 'bad' ptr
      TESTS: two `negcache` tests were merged
      data_provider_be: got rid of went_offline usage
      providers/ipa: Fixed obvious copy-paste er

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/archive/sssd-2_0_0.tar.gz
+url = https://github.com/SSSD/sssd/archive/sssd-2_2_0/sssd-2.2.0.tar.gz
 archives = 
 giturl = https://github.com/SSSD/sssd.git
 
