sssd: Autospec creation for update from version 2.2.2 to version 2.2.3
Alex Rodin (7):
      Added ERROR and PRINT macros to the tools
      Update sss_ssh.c
      Update __init__.py.in
      Added PRINT macro in the sssctl tool
      Update README.md
      Updated test_pam_responder.py
      Created a new sssd-ldap-attributes.5 man page

Alexey Tikhonov (39):
      providers/ipa/: add_v1_user_data() amended
      responder/cache_req: added debug helper function
      responder/nss: improved debug messages
      responder/nss: DCE
      responder: log cmdline of client pid
      SSS_CLIENT: got rid of using PRNG
      util/server: amended close_low_fds()
      util/sss_krb5.c: elimination of unreachable code
      util/sss_krb5: find_principal_in_keytab() was amended
      util/sss_krb5: fixed few memory handling issues
      util/sss_krb5: debug messages fixes
      sssctl/sssctl_domains.c: null dereference fixed
      MMAP_CACHE: use CSPRNG to init hash table seed
      Moved unsecure sss_rand() out of crypto lib
      Reduces code duplication
      sss_ssh_knownhostsproxy: relocated O_NONBLOCK setting
      sss_ssh_knownhostsproxy: fixed Coverity issue
      util/sss_krb5: amended sss_krb5_get_error_message()
      Amended sss_krb5_get_error_message() usage.
      ldap_child: sanitization of error handling
      KEYTAB_CLEAN_NAME macro was replaced
      SBUS: defer deallocation of sbus_watch_ctx
      util/server.c: become_daemon() made static
      server:become_daemon(): got rid of unused codepath
      server:become_daemon(): handle fail of fork()
      server:become_daemon(): fixed waitpid()-loop
      server:become_daemon(): fix read of uninitialized value
      server:become_daemon(): change handling of chdir() fail
      server:become_daemon(): handle fail of setsid()
      util/memory: sanitization
      util/memory: helper(s) to securely erase mem was reworked
      tools/sss_seed: proper zeroization of sensitive data
      util: fixed potential mem lea

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/archive/sssd-2_2_2/sssd-2.2.2.tar.gz
+url = https://releases.pagure.org/SSSD/sssd/sssd-2.2.3.tar.gz
 archives = 
-giturl = https://github.com/SSSD/sssd.git
+giturl = https://pagure.io/SSSD/sssd.git
 domain = 
 
 [autospec]
@@ -57,5 +57,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
