--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = sssd
-url = https://releases.pagure.org/SSSD/sssd/sssd-2.2.3.tar.gz
+url = https://github.com/SSSD/sssd/releases/download/sssd-2_3_0/sssd-2.3.0.tar.gz
 archives = 
-giturl = https://pagure.io/SSSD/sssd.git
+giturl = https://github.com/SSSD/sssd.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
