--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/releases/download/sssd-2_3_0/sssd-2.3.0.tar.gz
+url = https://github.com/SSSD/sssd/releases/download/2.4.1/sssd-2.4.1.tar.gz
 archives = 
 giturl = https://github.com/SSSD/sssd.git
 domain = 
