sssd: Autospec creation for update from version 2.5.2 to version 2.6.0
Alexey Tikhonov (17):
      Basics of 'subid ranges' support for IPA provider.
      NSS: don't treat absent 'CLEAR_MC_FLAG' as an error (This is expected in case of SIGHUP sent for log rotation.)
      TOOLS: replace system() with execvp() to avoid execution of user supplied command
      file utils: reduce log level in remove_tree_with_ctx() Users of this function are responsible to decide if fail is critical.
      BUILD: get rid of PCRE support
      UNICODE: drop support of glib2 for Unicode processing
      Got rid of 'local' provider.
      CONF: removed unused 'sbus_timeout' option
      Got rid of 'secrets' responder and it's support in KCM
      libsecrets was disbanded and merged into KCM responder as this is the only its user now.
      KCM: secrets db: got rid of legacy json format support
      KCM: secrets db: got rid of legacy encrypted payload format
      crypto: removed sss_encrypt()/sss_decrypt() helpers as those aren't used anymore.
      TESTS: avoid cross-test tainting of os.environ
      KCM: secdb: treat secdb_get_cc() == ENOENT the same way as corresponding key_by_*() == ENOENT (mostly)
      krb5_child: fixed incorrect checks on length value
      MONITOR: reduce logs severity around signalling and termination of services to avoid useless in those cases backtraces

Anuj Borah (12):
      Tests: SSSD is generating lot of LDAP queries in a very large environment Issue: https://github.com/SSSD/sssd/issues/5121 Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=1772513
      Tests: Add support to verify authentication indicators in pam_sss_gss
      Tests: fix sss_cache to also reset cached timestamp
      Test: Fix RHEL9.0 Regression - alltests-tier1
      Tests: Suppress log message
      Tests: RHEL9.0 Regression - alltests-tier1_2
      Tests: SSSD logs improvements: clarify which config option applies to each timeout in the logs
      Tests: Fix RHEL8.5 failures for

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/releases/download/2.5.2/sssd-2.5.2.tar.gz
+url = https://github.com/SSSD/sssd/releases/download/2.6.0/sssd-2.6.0.tar.gz
 archives = 
 giturl = https://github.com/SSSD/sssd.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = true
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
