--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/releases/download/2.9.1/sssd-2.9.1.tar.gz
+url = https://github.com/SSSD/sssd/releases/download/2.9.5/sssd-2.9.5.tar.gz
 archives = 
 giturl = https://github.com/SSSD/sssd.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = true
 # unset %build ld_as_needed variable
@@ -59,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
@@ -67,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
