sssd: Autospec creation for update from version 2.9.5 to version 2.11.0
Abhijit Roy (2):
      sssctl: Adding options for nss
      sdap_idmap: Enabling further debugging for to understand the underlying reason for Could not convert objectSID.

Alejandro López (55):
      FILE WATCH: Callback not executed on link or relative path
      TESTS: Fix doble slash comments
      SYSDB: Make enum sysdb_obj_type public
      IPA: Use a more specific filter when searching for BE_REQ_USER_AND_GROUP
      PAM: Fix a possible segmentation fault
      AD: The shortcut must be used equally on _send() and _done()
      TEST: Fix pam-srv-tests to correctly treat the test name
      IPA: Do not try to add duplicate values to the LDAP attributes
      UTIL: New function string_in_list_size()
      UTIL: add_strings_lists() becomes add_strings_lists_ex()
      RESPONDER: attr_in_list() is replaced by string_in_list_size()
      IPA: Do not duplicate the entry attributes.
      NSS: Replace notification message by a less scary one
      UTILS: Create a macro for the --config option
      UTILS: Add the db file name to server_setup()'s parameters
      CONFDB: Allow loading an empty configuration
      CONFDB: Fixed some missing dependencies in a header file
      KCM: Handle its own configuration
      KCM: Remove the oldest expired credential if no more space.
      KCM: Display in the log the limit as set by the user
      CI: Corrected the path to the logs
      KCM: Clean the pipe after the test has finished
      TESTS: Give KDC time to initialize
      LOGROTATE: logrotate should also signal sssd_kcm
      KCM: Replace a hard-coded constant by a macro
      KCM: Fixed a wrong check
      KCM: Remove unused cc_be_type from struct kcm_ccdb
      KCM: When freeing the client, check that it is not NULL.
      KCM: sss_iobuf_init_empty() shall not zero memory
      KCM: Reduce the amount of memory allocated for the packages
      KCM: Do not zero memory when not need.
      KCM: Fix a

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sssd
-url = https://github.com/SSSD/sssd/releases/download/2.9.5/sssd-2.9.5.tar.gz
+url = https://github.com/SSSD/sssd/releases/download/2.11.0/sssd-2.11.0.tar.gz
 archives = 
 giturl = https://github.com/SSSD/sssd.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = true
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -35,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
